Lucene Change Log

For more information on past and future Lucene versions, please see:
http://s.apache.org/luceneversions

======================= Lucene 11.0.0 =======================

API Changes
---------------------
* GITHUB#11023: Removing deprecated parameters from CheckIndex. (Jakub Slowinski)

New Features
---------------------
(No changes)

Improvements
---------------------
(No changes)

Optimizations
---------------------
* GITHUB#14011: Reduce allocation rate in HNSW concurrent merge. (Viliam Durina)

Bug Fixes
---------------------
(No changes)

Other
---------------------
(No changes)

======================= Lucene 10.1.0 =======================

API Changes
---------------------

* GITHUB#13859: Allow open-ended ranges in Intervals range queries. (Mayya Sharipova)

* GITHUB#13950: Make BooleanQuery#getClauses public and add #add(Collection<BooleanClause>) to BQ builder. (Shubham Chaudhary)

* GITHUB#13957: Removed LeafSimScorer class, to save its overhead. Scorers now
  compute scores directly from a SimScorer, postings and norms. (Adrien Grand)

* GITHUB#13998: Add IndexInput::isLoaded to determine if the contents of an
  input is resident in physical memory. (Chris Hegarty)

New Features
---------------------
(No changes)

Improvements
---------------------

* GITHUB#13986: Allow easier configuration of the Panama Vectorization provider with
  newer Java versions. Set the `org.apache.lucene.vectorization.upperJavaFeatureVersion`
  system property to increase the set of Java versions that Panama Vectorization will
  provide optimized implementations for. (Chris Hegarty)

Optimizations
---------------------

* GITHUB#13828: Reduce long[] array allocation for bitset in readBitSetIterator. (Zhang Chao)

* GITHUB#13800: MaxScoreBulkScorer now recomputes scorer partitions when the
  minimum competitive allows for a more favorable partitioning. (Adrien Grand)

* GITHUB#13930: Use growNoCopy when copying bytes in BytesRefBuilder. (Ignacio Vera)
